Initial import of plot_expr and draw_group_means

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(format_table)
 export(get_beta_ci)
 export(make_title)
 export(plot_event)
+export(plot_expr)
 export(preprocess_sample_colors)
