--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ License: MIT + file LICENSE
 LazyData: true
 URL: https://github.com/kcha/psiplot
 BugReports: https://github.com/kcha/psiplot/issues
+Suggests:
+    testthat
