--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,7 @@ export(get_beta_ci)
 export(make_title)
 export(plot_event)
 export(plot_expr)
+export(plot_multi)
 export(preprocess_sample_colors)
+import(ggplot2)
+importFrom(reshape2,melt)
