--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ URL: https://github.com/kcha/psiplot
 BugReports: https://github.com/kcha/psiplot/issues
 Imports:
     ggplot2 (>= 1.0.0),
-    reshape2 (>= 1.4)
+    reshape2 (>= 1.4),
+    methods
 Suggests:
     testthat
