Draw legend for group means

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,6 @@ export(plot_expr)
 export(plot_multi)
 export(preprocess_sample_colors)
 import(ggplot2)
+import(methods)
+import(plyr)
 importFrom(reshape2,melt)
