--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/kcha/psiplot/issues
 Imports:
     ggplot2 (>= 1.0.0),
     reshape2 (>= 1.4),
+    plyr (>= 1.8.1),
     methods
 Suggests:
     testthat
