--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ URL: https://github.com/kcha/psiplot
 BugReports: https://github.com/kcha/psiplot/issues
 Imports:
     ggplot2 (>= 1.0.0),
+    ggplot2 (>= 2.0.0),
     reshape2 (>= 1.4),
     plyr (>= 1.8.1),
     methods
