Subgrouping optional, tryCatch in get_beta_ci_subg, -trim_colnames, doc changes.
- Subgrouping is now optional in plot_event() and plot_expr() through the
argument subg=T (default: T), as long as the config file has the SubgroupName
column.
- Fitting of the joint beta distribution for CIs of subgrouped samples now
returns NA without crashing if the fit fails.
- Suffixes in sample names in expression and PSI tables (e.g. '-cRPKM') can be
now ignored in plot_event() and plot_expr() through the argument trim_colnames.
- Documentation changes.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,11 @@ Imports:
     ggplot2 (>= 2.2.1),
     reshape2 (>= 1.4),
     plyr (>= 1.8.1),
-    methods
+    methods,
+    MASS,
+    stats,
+    grDevices,
+    utils
 Suggests:
     testthat,
     gplots
