--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(convert_psi)
 export(format_table)
 export(get_beta_ci)
+export(get_beta_ci_subg)
 export(get_psi_samples)
 export(make_title)
 export(make_title.2)
@@ -10,7 +11,10 @@ export(plot_event)
 export(plot_expr)
 export(plot_multi)
 export(preprocess_sample_colors)
+import(MASS)
 import(ggplot2)
 import(methods)
 import(plyr)
+import(stats)
+importFrom(grDevices,colorRampPalette)
 importFrom(reshape2,melt)
