first commit of 2.2.0 version, all functions work but several docs, README, etc. left

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,14 @@ export(make_title.2)
 export(plot_event)
 export(plot_expr)
 export(plot_multi)
+export(plot_multievent)
 export(preprocess_sample_colors)
-import(MASS)
+import(dplyr)
 import(ggplot2)
+import(magrittr)
 import(methods)
-import(plyr)
+import(purrr)
+import(readr)
 import(stats)
+import(tidyr)
 importFrom(grDevices,colorRampPalette)
-importFrom(reshape2,melt)
