--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,8 @@ Imports:
 Suggests:
     testthat,
     pheatmap,
-    gplots
+    gplots,
+    knitr,
+    rmarkdown
 RoxygenNote: 6.0.1
+VignetteBuilder: knitr
