--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -31,13 +31,10 @@ jobs:
       - uses: r-lib/actions/setup-pandoc@v2
       - name: Install dependencies
         run: |
-          install.packages(c("remotes", "rcmdcheck", "testthat"))
+          install.packages(c("remotes", "rcmdcheck"))
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
       - name: Check
         run: rcmdcheck::rcmdcheck(args = "--no-manual", error_on = "error")
         shell: Rscript {0}
-      - name: Run tests
-        run: |
-          cd tests
-          Rscript run_tests.R
+.R
