--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -16,18 +16,20 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.config.os }}
     strategy:
       matrix:
-        os: ['macos-latest', 'ubuntu-latest']
-        r-version: ['3.6.3', '4.1.1']
+        config:
+         - {os: ubuntu-latest,   r: 'release'}
+         - {os: macos-latest,   r: 'release'}
+         - {os: macos-latest,   r: '3.6.3'}
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up R ${{ matrix.r-version }}
+      - name: Set up R ${{ matrix.config.r }}
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: ${{ matrix.r-version }}
+          r-version: ${{ matrix.config.r }}
       - uses: r-lib/actions/setup-pandoc@v2
       - name: Install dependencies
         run: |
